# xontrib-cookiecutter

./: LICENSE  README.md  cookiecutter.json
xontrib-{{cookiecutter.project_slug}}/: README.md  pyproject.toml
